<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">bikeFriend</string>
  
  <string name="menu_refresh">Refresh</string>
  <string name="menu_layer">Layers</string>
  <string name="menu_layer_bike">Bike</string>
  <string name="menu_layer_ev">EV</string>
  <string name="menu_places">Places</string>
  <string name="menu_place_taipei">Taipei</string>
  <string name="menu_place_taichung">Taichung</string>
  <string name="menu_place_kaohsiung">Kaohsiung</string>
  <string name="menu_place_tainan">Tainan</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_about">About</string>
  
  <string name="map_popup_station_nb_bike_format">Bicycles: %d</string>
  <string name="map_popup_station_nb_empty_slot_format">Empty Slots: %d</string>
  <string name="map_popup_station_data_age_sec_format">Station data is %d sec(s) old.</string>
  <string name="map_popup_station_data_age_min_format">Station data is %d min(s) old.</string>
  <string name="map_popup_station_data_age_hour_format">Station data is %d hour(s) old.</string>
  <string name="map_popup_station_data_age_day_format">Station data is %d day(s) old.</string>
</resources>
