<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <item
    android:id="@+id/menu_refresh"
    android:icon="@drawable/ic_action_refresh"
    android:showAsAction="ifRoom"
    android:title="@string/menu_refresh"/>
  <item
    android:id="@+id/menu_places"
    android:icon="@drawable/ic_action_goto"
    android:showAsAction="ifRoom"
    android:title="@string/menu_places">
    <menu>
      <item
        android:id="@+id/menu_place_taipei"
        android:icon="@drawable/ic_action_location"
        android:showAsAction="ifRoom"
        android:title="@string/menu_place_taipei"/>
      <item
        android:id="@+id/menu_place_taichung"
        android:icon="@drawable/ic_action_location"
        android:showAsAction="ifRoom"
        android:title="@string/menu_place_taichung"
        android:visible="false"/>
      <item
        android:id="@+id/menu_place_kaohsiung"
        android:icon="@drawable/ic_action_location"
        android:showAsAction="ifRoom"
        android:title="@string/menu_place_kaohsiung"/>
      <item
        android:id="@+id/menu_place_tainan"
        android:icon="@drawable/ic_action_location"
        android:showAsAction="ifRoom"
        android:title="@string/menu_place_tainan"
        android:visible="false"/>
    </menu>
  </item>
  <item
    android:id="@+id/menu_settings"
    android:icon="@drawable/ic_action_settings"
    android:showAsAction="never"
    android:title="@string/menu_settings"
    android:visible="false"/>
  <item
    android:id="@+id/menu_about"
    android:icon="@drawable/ic_action_about"
    android:showAsAction="never"
    android:title="@string/menu_about"
    android:visible="false"/>
</menu>